<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tarpon Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_tarpon_table">Tarpon Table</string>
    <string name="action_about">About the app</string>
    <string name="edit_message_length">Fork length (cm)</string>
    <string name="edit_message_girth">Girth (cm)</string>
    <string name="edit_message_length_clown">Fork length (inches)</string>
    <string name="edit_message_girth_clown">Girth (inches)</string>
    <string name="length">Length: </string>
    <string name="girth">Girth: </string>
    <string name="example_text_length">120 cm</string>
    <string name="example_text_girth">90 cm</string>
    <string name="example_text_weight">100 kg</string>
    <string name="example_text_date">20160828 13:56</string>
    <string name="button_send">Do the math!</string>
    <string name="button_save">Save this result</string>
    <string name="title_activity_display_message">And it weighs …</string>
    <string name="result_new_formula">%1$.2f %2$s</string>
    <string name="with_the_old_formula">(With the old formula: %1$.2f %2$s)</string>
    <string name="result_kg">%.2f kg</string>
    <string name="result_lb">%.2f lb</string>
    <string name="label_share">Share</string>
    <string name="share_text">I just caught a Tarpon!\n
        It weights about %1$s.\n%2$s\n\n
        Length: %3$s %4$s, girth: %5$s %6$s.\n
        Weight calculated with the Tarpon Calculator app.</string>
    <string name="share_text_from_table">I caught a Tarpon!\n
        It weighed about %1$s.\n\n
        Length: %2$s, girth: %3$s.\n
        Weight calculated with the Tarpon Calculator app.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lb">lb</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="in">in</string>
    <string name="new_weight">Weight</string>
    <string name="old_weight">(With the old formula: Old weight)</string>
    <string name="saved">Saved</string>
    <string name="pref_unit">Imperial units</string>
    <string name="pref_unit_summary">aka \"US customary\"</string>
    <string name="title_activity_about">About</string>
    <string name="version_text">Tarpon Calculator 1.1</string>
    <string name="about_text">\n
        The \"New formula\" is from the paper
        \"A reliable game fish weight estimation model for Atlantic Tarpon (<i>Megalops atlanticus</i>)\"
        (Ault and Luo, 2013)\n\n
        The \"Old formula\" is the classic (and quite inaccurate) \n
        <i>weight = length * girth * girth / 800</i>\n(inches, pounds)\n\n

        This app is Free Software. The code is at https://github.com/oggust/tarpon-calculator.git\n
        \n
        If you want to donate anything, donate it to the good folks at the Tarpon &amp; Bonefish Research Center (TBRC) at http://www.tarponresearch.com
       </string>
    <string name="about_text2"><![CDATA[… or the Bonefish & Tarpon Trust (BTT).\n
        http://www.bonefishtarpontrust.org]]></string>
    <string name="contact_text">\n\nBugs? Feature requests? I\'m oggust@gmail.com</string>
    <string name="tbrc_alt_text">TBRC logo</string>
</resources>
