<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item
            android:id="@+id/menu_item_share"
            android:showAsAction="ifRoom"
            android:title="@string/label_share"
            android:actionProviderClass=
                "android.widget.ShareActionProvider" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_about"/>

      <item
        android:id="@+id/action_tarpon_table"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_tarpon_table"/>
</menu>
