<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/edit_message_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message_length"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edit_message_girth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message_girth"
        android:inputType="numberDecimal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

</LinearLayout>
