<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_text"
            android:textSize="16sp"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:textSize="16sp"
            android:textIsSelectable="true"
            android:autoLink="web" />

        <ImageView
            android:id="@+id/tbrc_logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/tbrc_alt_text"
            android:src="@drawable/tbrc_logo_um" />

        <TextView
            android:id="@+id/about_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text2"
            android:textSize="16sp"
            android:textIsSelectable="true"
            android:autoLink="web" />

        <TextView
            android:id="@+id/contact_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_text"
            android:textSize="16sp"
            android:textIsSelectable="true"
            android:autoLink="web" />
    </LinearLayout>
</ScrollView>