<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/display_message_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/new_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/new_weight"
        android:textSize="40sp"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/old_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_weight"
        android:text="@string/old_weight"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/old_weight"
        android:onClick="saveData"
        android:text="@string/button_save" />

</RelativeLayout>

